--- a/src/Part1_TensorFlow.ipynb
+++ b/src/Part1_TensorFlow.ipynb
@@ -164,7 +164,7 @@
         "### Defining higher-order Tensors ###\n",
         "\n",
         "'''TODO: Define a 2-d Tensor'''\n",
-        "matrix = # TODO\n",
+        "matrix = tf.random.uniform((2,2))",
         "\n",
         "assert isinstance(matrix, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(matrix).numpy() == 2"
@@ -181,7 +181,7 @@
         "'''TODO: Define a 4-d Tensor.'''\n",
         "# Use tf.zeros to initialize a 4-d Tensor of zeros with size 10 x 256 x 256 x 3. \n",
         "#   You can think of this as 10 images where each image is RGB 256 x 256.\n",
-        "images = # TODO\n",
+        "images = # tf.random.uniform((2,2,2,2))",
         "\n",
         "assert isinstance(images, tf.Tensor), \"matrix must be a tf Tensor object\"\n",
         "assert tf.rank(images).numpy() == 4, \"matrix must be of rank 4\"\n",
@@ -277,9 +277,9 @@
         "# Construct a simple computation function\n",
         "def func(a,b):\n",
         "  '''TODO: Define the operation for c, d, e (use tf.add, tf.subtract, tf.multiply).'''\n",
-        "  c = # TODO\n",
-        "  d = # TODO\n",
-        "  e = # TODO\n",
+        "  c = # a+b",
+        "  d = # b+c",
+        "  e = # d+c",
         "  return e"
       ],
       "execution_count": null,
@@ -360,10 +360,10 @@
         "\n",
         "  def call(self, x):\n",
         "    '''TODO: define the operation for z (hint: use tf.matmul)'''\n",
-        "    z = # TODO\n",
+        "    z = # tf.matmul(x,x)",
         "\n",
         "    '''TODO: define the operation for out (hint: use tf.sigmoid)'''\n",
-        "    y = # TODO\n",
+        "    y = # tf.sigmoid(z)",
         "    return y\n",
         "\n",
         "# Since layer parameters are initialized randomly, we will set a random seed for reproducibility\n",
@@ -411,7 +411,7 @@
         "# Remember: dense layers are defined by the parameters W and b!\n",
         "# You can read more about the initialization of W and b in the TF documentation :) \n",
         "# https://www.tensorflow.org/api_docs/python/tf/keras/layers/Dense?version=stable\n",
-        "dense_layer = # TODO\n",
+        "dense_layer = tf.keras.layers.Dense(10)",
         "\n",
         "# Add the dense layer to the model\n",
         "model.add(dense_layer)\n"
@@ -438,7 +438,7 @@
         "x_input = tf.constant([[1,2.]], shape=(1,2))\n",
         "\n",
         "'''TODO: feed input into the model and predict the output!'''\n",
-        "model_output = # TODO\n",
+        "model_output = # model(x_input)",
         "print(model_output)"
       ],
       "execution_count": null,
@@ -470,7 +470,7 @@
         "  def __init__(self, n_output_nodes):\n",
         "    super(SubclassModel, self).__init__()\n",
         "    '''TODO: Our model consists of a single Dense layer. Define this layer.''' \n",
-        "    self.dense_layer = '''TODO: Dense Layer'''\n",
+        "    self.dense_layer = '''tf.keras.layers.Dense(10)'''\n",
         "\n",
         "  # In the call function, we define the Model's forward pass.\n",
         "  def call(self, inputs):\n",
@@ -537,6 +537,7 @@
         "      under control of the isidentity argument.'''\n",
         "  def call(self, inputs, isidentity=False):\n",
         "    x = self.dense_layer(inputs)\n",
+        "    return x
         "    '''TODO: Implement identity behavior'''"
       ],
       "execution_count": null,
@@ -562,8 +563,8 @@
         "\n",
         "x_input = tf.constant([[1,2.]], shape=(1,2))\n",
         "'''TODO: pass the input into the model and call with and without the input identity option.'''\n",
-        "out_activate = # TODO\n",
-        "out_identity = # TODO\n",
+        "out_activate = # identity",
+        "out_identity = # model(x_input)",
         "\n",
         "print(\"Network output with activation: {}; network identity output: {}\".format(out_activate.numpy(), out_identity.numpy()))"
       ],
@@ -658,7 +659,7 @@
         "for i in range(500):\n",
         "  with tf.GradientTape() as tape:\n",
         "    '''TODO: define the loss as described above'''\n",
-        "    loss = # TODO\n",
+        "    loss = # x_f-i",
         "\n",
         "  # loss minimization using gradient tape\n",
         "  grad = tape.gradient(loss, x) # compute the derivative of the loss with respect to x\n",
