fix:open problem

--- a/src/Part1_TensorFlow.ipynb
+++ b/src/Part1_TensorFlow.ipynb
@@ -659,7 +659,7 @@
         "for i in range(500):\n",
         "  with tf.GradientTape() as tape:\n",
         "    '''TODO: define the loss as described above'''\n",
-        "    loss = # x_f-i",
+        "    loss = # x_f-i1",
         "\n",
         "  # loss minimization using gradient tape\n",
         "  grad = tape.gradient(loss, x) # compute the derivative of the loss with respect to x\n",
